[package]
name = "trustchain"
version = "0.1.0"
edition = "2021"
authors = ["Web3 Ecosystem Team"]
description = "TrustChain - Certificate Authority with Certificate Transparency and DNS resolution"
license = "MIT OR Apache-2.0"
repository = "https://github.com/web3-ecosystem/trustchain"
keywords = ["ca", "certificate", "transparency", "dns", "consensus"]

[dependencies]
# Core async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# STOQ transport integration (replaces direct QUIC)
stoq = { git = "https://github.com/hypermesh-online/stoq.git", features = ["high-performance"] }
bytes = { version = "1.6", features = ["serde"] }

# Certificate and cryptography
x509-parser = "0.16"
der-parser = { workspace = true }
ring = "0.17"
ed25519-dalek = { workspace = true }
rsa = "0.9"
pem = { workspace = true }
der = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"

# Post-quantum cryptography
pqcrypto-falcon = "0.3"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
aes-gcm = { workspace = true }
falcon-rust = "0.1"  # Alternative FALCON implementation
serde_arrays = "0.1"  # For serializing fixed-size arrays

# HTTP client
reqwest = { workspace = true }

# Compression
flate2 = { workspace = true }

# Web and API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# DNS
trust-dns-client = { workspace = true }
trust-dns-server = { workspace = true }
trust-dns-proto = { workspace = true }
hickory-client = { workspace = true }
hickory-proto = { workspace = true }

# Data structures and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = { workspace = true }
bincode = "1.3"

# Consensus and blockchain
sha2 = "0.10"
blake3 = "1.5"
merkletree = { workspace = true }

# Storage and data management
dashmap = "6.0"
arc-swap = "1.7"
parking_lot = "0.12"
sqlx = { workspace = true }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
num_cpus = { workspace = true }
time = { version = "0.3", features = ["macros", "formatting"] }

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }

# IPv6 networking
socket2 = "0.5"

# Additional
hex = "0.4"
base64 = "0.22"
rand = "0.8"
regex = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
proptest = "1.4"
tempfile = "3.10"
tokio-test = { workspace = true }

[features]
default = ["ca", "ct", "dns", "consensus"]

# Core features
ca = []           # Certificate Authority
ct = []           # Certificate Transparency
dns = []          # DNS resolution
consensus = []    # NKrypt consensus integration

# Testing and development
localhost-testing = []
production-ready = ["consensus"]

[lib]
name = "trustchain"
path = "src/lib.rs"


[[bin]]
name = "trustchain-server"
path = "src/bin/trustchain-server.rs"

[[bin]]
name = "trustchain-simple"
path = "src/bin/simple-server.rs"

[[bin]]
name = "trustchain-standalone"
path = "src/bin/standalone-server.rs"

